--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WordPress.com Style Guide",
+  "name": "dotcom-style-guide",
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "~0.4.1",
